[flake8]
max-complexity = 12
# Eventually remove? E402, F403, and F405
extend-ignore = E203, E501, E722, B950, E402, F403, F405
select = C,E,F,W,B,B9

[metadata]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
install_requires =
    numpy >=1.13.3

[tool:pytest]
testpaths =
  python/tests

[codespell]
ignore-words-list = gaus, hist, lsit, nd, parms, retur, ue, ba, claus, fo
