[metadata]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Homepage = https://goofit.github.io
    Documentation = https://goofit.github.io/GooFit
    Bug Tracker = https://github.com/scikit-hep/package/issues
    Changelog = https://github.com/GooFit/GooFit/blob/master/docs/CHANGELOG.md

[options]
python_requires = >=3.6
install_requires =
    numpy >=1.13.3


[options.extras_require]
test =
    pytest>=6
dev =
    pytest>=6
    matplotlib>=1.5
    pandas>=0.15.1
    uncertainties>=3.0.2
    scipy
    plumbum
